--- a/clientes/templates/agregar_cliente.html
+++ b/clientes/templates/agregar_cliente.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Signup</h1>
+<h1>Agregar cliente</h1>
 
 {{error}}
-<form method="POST">
+<form action="/clientes/agregar/" method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <button>
-        Signup
+        Agregar
     </button>
 </form>
 {% endblock %}
