Privacidad y seguridad en polizas y mejora en cómo se presentan los datos en el forms y cómo se llenan los forms

--- a/clientes/templates/dashboard.html
+++ b/clientes/templates/dashboard.html
@@ -7,7 +7,7 @@
     <li>
         <a href="{% url 'cliente_details' cliente.id %}">
             <h2>{{cliente.nombre}}</h2>
-            <p>{{cliente.fecha_nacimiento|date:'j/M/Y'}}</p>
+            <p>{{cliente.fecha_nacimiento}}</p>
             <p>{{cliente.telefono}}</p>
             <p>{{cliente.correo}}</p>
         </a>
