--- a/clientes/templates/agregar_cliente.html
+++ b/clientes/templates/agregar_cliente.html
@@ -6,7 +6,10 @@
 {{error}}
 <form action="/clientes/agregar/" method="POST">
     {% csrf_token %}
-    {{form.as_p}}
+    <p>Nombre completo: {{form.nombre}}</p>
+    <p>Fecha de nacimiento: {{form.fecha_nacimiento}}</p>
+    <p>Teléfono: {{form.telefono}}</p>
+    <p>Correo: {{form.correo}}</p>
     <button>
         Agregar
     </button>
