--- a/clientes/templates/cliente_details.html
+++ b/clientes/templates/cliente_details.html
@@ -3,16 +3,21 @@
 {% block content %}
 
 <h1>{{cliente.nombre}}</h1>
-<p>{{cliente.fecha_nacimiento}}</p>
-<p>{{cliente.telefono}}</p>
-<p>{{cliente.correo}}</p>
-<p>{{cliente.notas}}</p>
+<p>Fecha de nacimiento: {{cliente.fecha_nacimiento|date:'j/M/Y'}}</p>
+<p>Teléfono: {{cliente.telefono}}</p>
+<p>Correo: {{cliente.correo}}</p>
+<pre>{{cliente.notas}}</pre>
 <ul>
     {% for poliza in polizas %}
     <li>
         <a href="{% url 'editar_poliza' cliente.id poliza.id %}">
-            <h2>{{poliza.numero_poliza}}</h2>
-            <p>{{poliza.tipo_seguro}}</p>
+            <h3>N. Póliza: {{poliza.numero_poliza}}</h3>
+            <p>Tipo de seguro: {{poliza.tipo_seguro}}</p>
+            <p>Fecha de inicio: {{poliza.fecha_inicio}}</p>
+            <p>Fecha de vencimiento: {{poliza.fecha_vencimiento}}</p>
+            <p>Prima total: {{poliza.prima_total}}</p>
+            <p>Forma de pago: {{poliza.forma_pago}}</p>
+            <p>Estatus: {{poliza.estatus}}</p>
         </a>
     </li>
     {% endfor %}
