Respaldo antes de migrar

--- a/clientes/templates/cliente_details.html
+++ b/clientes/templates/cliente_details.html
@@ -18,6 +18,7 @@
             <p>Prima total: {{poliza.prima_total}}</p>
             <p>Forma de pago: {{poliza.forma_pago}}</p>
             <p>Estatus: {{poliza.estatus}}</p>
+            <p>Estatus: {{poliza.proxima_renovacion}}</p>
         </a>
     </li>
     {% endfor %}
