--- a/clientes/templates/base.html
+++ b/clientes/templates/base.html
@@ -20,6 +20,9 @@
                     <a href="/clientes/agregar">Agregar asegurado</a>
                 </li>
                 <li>
+                    <a href="/dashboard">Dashboard</a>
+                </li>
+                <li>
                     <a href="/logout">Logout</a>
                 </li>
             {% else %}
