--- a/clientes/templates/editar_poliza.html
+++ b/clientes/templates/editar_poliza.html
@@ -12,6 +12,7 @@
     <p>Fecha de vencimiento: {{form.fecha_vencimiento}}</p>
     <p>Prima total: {{form.prima_total}}</p>
     <p>Forma de pago: {{form.forma_pago}}</p>
+    <p>Estatus: {{form.fecha_ultimo_pago}}</p>
     <p>Estatus: {{form.estatus}}</p>
     <button>
         Guardar
